monopoly-deployment/yaml/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monopoly-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      name: monopoly-ui
      tier: frontend
  template:
    metadata:
      labels:
        name: monopoly-ui
        tier: frontend
    spec:
      containers:
        - name: monopoly-ui
          image: registry.gitlab.com/kdg-ti/integratieproject-2/teams/team-5/monopoly.ui:latest
          imagePullPolicy: Always
          name: monopoly-ui
          ports: 
            - containerPort: 3000
          resources:
            requests:
              cpu: "250m"
      imagePullSecrets:
        - name: secretkey
---
apiVersion: v1
kind: Service
metadata:
  name: monopoly-ui
spec:
  type: NodePort
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    name: monopoly-ui
    tier: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
spec:
  selector:
    matchLabels:
      app: gateway
      tier: backend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: gateway
        tier: backend
        track: stable
    spec:
      containers:
        - name: gateway
          image: registry.gitlab.com/kdg-ti/integratieproject-2/teams/team-5/monopoly.gateway:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 9090
          resources:
            requests:
              cpu: "250m"
      imagePullSecrets:
        - name: secretkey
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monopoly-game
spec:
  selector:
    matchLabels:
      app: monopoly-game
      tier: backend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: monopoly-game
        tier: backend
        track: stable
    spec:
      containers:
        - name: monopoly-game
          image: registry.gitlab.com/kdg-ti/integratieproject-2/teams/team-5/monopoly.game:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 9092
          resources:
            requests:
              cpu: "250m"
      imagePullSecrets:
        - name: secretkey
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users
spec:
  selector:
    matchLabels:
      app: users
      tier: backend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: users
        tier: backend
        track: stable
    spec:
      containers:
        - name: users
          image: registry.gitlab.com/kdg-ti/integratieproject-2/teams/team-5/monopoly.usermanagement:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 9091
          resources:
            requests:
              cpu: "250m"
      imagePullSecrets:
        - name: secretkey
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat
spec:
  selector:
    matchLabels:
      app: chat
      tier: backend
      track: stable
  replicas: 1
  template:
    metadata:
      labels:
        app: chat
        tier: backend
        track: stable
    spec:
      containers:
        - name: gateway
          image: registry.gitlab.com/kdg-ti/integratieproject-2/teams/team-5/monopoly.communication:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 9093
          resources:
            requests:
              cpu: "900m"
      imagePullSecrets:
        - name: secretkey
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  annotations:
    beta.cloud.google.com/backend-config: '{"ports": {"9090":"monopoly-backend-config"}}'
spec:
  type: NodePort
  selector:
    app: gateway
    tier: backend
  ports:
    - port: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: users
  annotations:
    beta.cloud.google.com/backend-config: '{"ports": {"9091":"monopoly-backend-config"}}'
spec:
  type: ClusterIP
  selector:
    app: users
    tier: backend
  ports:
    - port: 9091
---
apiVersion: v1
kind: Service
metadata:
  name: monopoly-game
  annotations:
    beta.cloud.google.com/backend-config: '{"ports": {"9092":"monopoly-backend-config"}}'
spec:
  type: ClusterIP
  selector:
    app: monopoly-game
    tier: backend
  ports:
    - port: 9092
---
apiVersion: v1
kind: Service
metadata:
  name: chat
  annotations:
    beta.cloud.google.com/backend-config: '{"ports": {"9093":"monopoly-backend-config"}}'
spec:
  type: ClusterIP
  selector:
    app: chat
    tier: backend
  ports:
    - port: 9093
